Update index page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <ul>
             <li class="website_logo" onclick="window.location.href='index.html'">chutsu</li>
             <li onclick="window.location.href='about.html'">About</li>
-            <li onclick="window.location.href='projects.html'">Projects</li>
+            <li onclick="window.location.href='index.html'">Projects</li>
         </ul>
     </nav>
 
