Remove GP keywoard in wavelab presentation

--- a/presentations/wavelab_intro/index.html
+++ b/presentations/wavelab_intro/index.html
@@ -342,14 +342,14 @@ class: title_page, inverse
 
 ---
 
-# But what can GP do?
+# But what can it do?
 
 ---
 
 layout: false
 
 .left-column[
-## Example Applications of GP
+## Example Applications
 ### - Symbolic Regression
 ]
 
@@ -365,13 +365,13 @@ Similar to Curve Fitting, the goal is to find the best model that fits the data
 ---
 
 .left-column[
-## Example Applications of GP
+## Example Applications
 ### - Symbolic Regression
 ]
 
 .right-column[
 ### Symbolic Regression
-To perform Symbolic Regression, GP represents the candidate solutions (i.e. an
+To perform Symbolic Regression, we represent the candidate solutions (i.e. an
 equation) in the form of a Tree Data Structure.
 
 .center[
@@ -382,7 +382,7 @@ equation) in the form of a Tree Data Structure.
 ---
 
 .left-column[
-## Example Applications of GP
+## Example Applications
 ### - Symbolic Regression
 ]
 
@@ -405,15 +405,15 @@ Demo of [playground](http://github.com/chutsu/playground) solving toy problems
 ---
 
 .left-column[
-## Example Applications of GP
+## Example Applications
 ### - Symbolic Regression
 ### - Classification
 ]
 
 .right-column[
   ### Classification
-  Using a Tree data structure again, GP can evolve a decision tree to solve
-  classification problems.
+  Using a Tree data structure again, the algorithm can evolve a decision tree
+  to solve classification problems.
 
   ![gp classification](./images/make_circles.png)
 ]
@@ -433,7 +433,7 @@ Demo of [playground](http://github.com/chutsu/playground) solving toy problems
 ---
 
 .left-column[
-## Example Applications of GP
+## Example Applications
 ### - Symbolic Regression
 ### - Classification
 ### - Neuro Evolution
